--- a/Web/particles/snow.json
+++ b/Web/particles/snow.json
@@ -1,21 +1,21 @@
 {
   "particles": {
     "number": {
-      "value": 500
+      "value": 300
     },
     "color": {
-      "value": "#0af6ff"
+      "value": "random"
     },
     "shape": {
       "type": "circle"
     },
     "size": {
-      "value": 10,
+      "value": 9,
       "random": true
     },
     "line_linked": {
-      "enable": true,
-      "distance": 75,
+      "enable": false,
+      "distance": 5,
       "color": "#fff76d",
       "opacity": 88,
       "width": 2
